# inugami

./: .gitignore  CMakeLists.txt  Doxyfile  Inugami.cbp  README  README.md  TODO.md  build.sh  customcore.cpp  customcore.hpp  main.cpp  meta.cpp  meta.hpp
data/: walls.pdn
inugami/: animatedsprite.cpp  animatedsprite.h  animatedsprite.hpp  camera.cpp  camera.h  camera.hpp  containers.h  core.cpp  core.h  core.hpp  exception.cpp  exception.hpp  geometry.cpp  geometry.hpp  image.cpp  image.hpp  interface.cpp  interface.h  interface.hpp  inugami.h  inugami.hpp  inugl.h  loaders.cpp  loaders.h  loaders.hpp  logger.h  logger.hpp  math.h  math.hpp  mathtypes.h  mathtypes.hpp  mesh.cpp  mesh.h  mesh.hpp  opengl.h  opengl.hpp  pixel.cpp  profiler.cpp  profiler.h  profiler.hpp  (+24 more)
inugami/detail/: addonce.hpp  constattr.hpp  constmap.hpp  containerutils.hpp  range.hpp  streamutils.hpp
shaders/: crazy.frag  crazy.vert
src/: customcore.cpp  main.cpp
src/inugami/: camera.cpp  camera.hpp  core.hpp  exception.cpp  exception.hpp  geometry.cpp  geometry.hpp  interface.cpp  interface.hpp  inugami.hpp  inugl.cpp  loaders.cpp  logger.hpp  math.hpp  mathtypes.hpp  mesh.cpp  mesh.hpp  opengl.hpp  pixel.hpp  shader.hpp  shaderprogram.hpp  spritesheet.cpp  spritesheet.hpp  texture.cpp  transform.hpp  utility.hpp
src/inugami/detail/: containerutils.hpp  edgedetector.hpp  range.hpp
src/inugami/interface/: input.cpp  input.hpp  interface.hpp  tracker.cpp  tracker.hpp  window.cpp  window.hpp  windowsystem.cpp  windowsystem.hpp
src/inugami/resources/mesh/: geometry.cpp  geometry.hpp  (+2 more)
(+10 files in other folders)
